[gd_scene load_steps=2 format=3 uid="uid://b7qkra68rineb"]

[ext_resource type="Script" path="res://scripts/registration_request.gd" id="1_ffgii"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_next = NodePath("../../MarginContainer2/PasswordInput")
theme_override_font_sizes/font_size = 30
placeholder_text = "Your username..."

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_next = NodePath("../../MarginContainer3/ConfirmPasswordInput")
focus_previous = NodePath("../../MarginContainer/UsernameInput")
theme_override_font_sizes/font_size = 30
placeholder_text = "Your password..."
secret = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="ConfirmPasswordInput" type="LineEdit" parent="VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_previous = NodePath("../../MarginContainer2/PasswordInput")
theme_override_font_sizes/font_size = 30
placeholder_text = "Confirm password..."
secret = true

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="ErrorLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/default_color = Color(0.803922, 0.282353, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RegisterButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Register"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Cancel"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("1_ffgii")

[connection signal="text_submitted" from="VBoxContainer/MarginContainer/UsernameInput" to="HTTPRequest" method="on_input_submit"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer2/PasswordInput" to="HTTPRequest" method="on_input_submit"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer3/ConfirmPasswordInput" to="HTTPRequest" method="on_input_submit"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer/RegisterButton" to="HTTPRequest" method="register"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer2/CancelButton" to="HTTPRequest" method="cancel"]
